--- a/src/main/resources/fxml/BuyerMenu/BuyerEditPersonalInfo.fxml
+++ b/src/main/resources/fxml/BuyerMenu/BuyerEditPersonalInfo.fxml
@@ -7,6 +7,7 @@
 <AnchorPane prefHeight="444.0" prefWidth="611.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Menus.MenuController.BuyerMenu.BuyerEditPersonalInfo">
 <MenuBar>
     <Menu text="options">
+        <MenuItem onAction="#logout"></MenuItem>
         <MenuItem onAction="#back" text="back" />
     </Menu>
 </MenuBar>
