--- a/src/main/resources/fxml/BuyerMenu/BuyerMenu.fxml
+++ b/src/main/resources/fxml/BuyerMenu/BuyerMenu.fxml
@@ -12,16 +12,16 @@
                <Menu mnemonicParsing="false" text="option">
                   <items>
                       <MenuItem mnemonicParsing="false" onAction="#viewShop" text="Shop" />
-                      <MenuItem mnemonicParsing="false" onAction="#back" text="back" />
                       <MenuItem mnemonicParsing="false" onAction="#logout" text="logout" />
+                      <MenuItem mnemonicParsing="false" onAction="#viewEditPersonalInfo" text="Edit personal info" />
+                      <MenuItem mnemonicParsing="false" onAction="#back" text="back" />
                   </items>
                </Menu>
                <Menu text="view">
-                   <MenuItem mnemonicParsing="false" onAction="#viewEditPersonalInfo" text="Edit" />
                    <MenuItem mnemonicParsing="false" onAction="#viewCart" text="View Cart" />
                    <MenuItem mnemonicParsing="false" onAction="#viewDiscountCodes" text="View Discount Codes" />
                    <MenuItem mnemonicParsing="false" onAction="#viewOrders" text="View Orders" />
-                   <MenuItem text="viewRequests"     onAction="#viewRequests" ></MenuItem>
+                   <MenuItem text="view Requests"     onAction="#viewRequests" ></MenuItem>
                </Menu>
            </menus>
        </MenuBar>
