--- a/src/main/resources/fxml/SellerMenu/SellerMenu.fxml
+++ b/src/main/resources/fxml/SellerMenu/SellerMenu.fxml
@@ -10,17 +10,21 @@
            <menus>
                <Menu mnemonicParsing="false" text="option">
                   <items>
-                      <MenuItem mnemonicParsing="false" onAction="#manageProducts" text="Manage Products" />
-                      <MenuItem mnemonicParsing="false" onAction="#addProduct" text="Add Product" />
-                      <MenuItem mnemonicParsing="false" onAction="#manageSales" text="Manage Sales" />
-                      <MenuItem mnemonicParsing="false" onAction="#viewSalesHistory" text="View Sales History" />
-                      <MenuItem mnemonicParsing="false" onAction="#viewShop" text="Shop" />
-                      <MenuItem mnemonicParsing="false" onAction="#viewDiscounts" text="Discounts" />
-                      <MenuItem mnemonicParsing="false" onAction="#back" text="back" />
-                      <MenuItem onAction="#editPersonalInfo" text="edit personal info" />
                       <MenuItem mnemonicParsing="false" onAction="#logout" text="logout" />
-                      <MenuItem text="viewRequests"     onAction="#viewRequests" ></MenuItem>
+                      <MenuItem onAction="#editPersonalInfo" text="edit personal info" />
+                      <MenuItem mnemonicParsing="false" onAction="#back" text="back" />
                   </items>
+               </Menu>
+               <Menu text="view">
+                   <MenuItem mnemonicParsing="false" onAction="#viewSalesHistory" text="View Sales History" />
+                   <MenuItem mnemonicParsing="false" onAction="#viewShop" text="Shop" />
+                   <MenuItem mnemonicParsing="false" onAction="#viewDiscounts" text="Discounts" />
+                   <MenuItem text="viewRequests"     onAction="#viewRequests" ></MenuItem>
+               </Menu>
+               <Menu text="manage">
+                   <MenuItem mnemonicParsing="false" onAction="#addProduct" text="Add Product" />
+                   <MenuItem mnemonicParsing="false" onAction="#manageProducts" text="Manage Products" />
+                   <MenuItem mnemonicParsing="false" onAction="#manageSales" text="Manage Sales" />
                </Menu>
            </menus>
        </MenuBar>
