--- a/src/main/resources/fxml/AdminMenu/ManageCommercials.fxml
+++ b/src/main/resources/fxml/AdminMenu/ManageCommercials.fxml
@@ -3,13 +3,13 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="483.0" prefWidth="705.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Menus.MenuController.AdminMenu.ManageCommercials">
-    <ListView fx:id="commercials" onMouseClicked="#removeCommercial" layoutX="55.0" layoutY="31.0" />
+<AnchorPane prefHeight="483.0" prefWidth="705.0" style="-fx-background-color: #dedcde;" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Menus.MenuController.AdminMenu.ManageCommercials">
+    <ListView fx:id="commercials" layoutX="55.0" layoutY="31.0" onMouseClicked="#removeCommercial" />
     <Label layoutX="321.0" layoutY="31.0" text="these items will be shown in the commercial panel" />
     <Label layoutX="314.0" layoutY="94.0" text="click on any item you wish to remove from the commercial panel." />
-    <MenuBar >
+    <MenuBar>
         <Menu text="options">
-            <MenuItem text="back" onAction="#back"></MenuItem>
+            <MenuItem onAction="#back" text="back" />
         </Menu>
     </MenuBar>
 </AnchorPane>
