--- a/src/main/resources/fxml/ShopMenu.fxml
+++ b/src/main/resources/fxml/ShopMenu.fxml
@@ -9,7 +9,7 @@
            <menus>
                <Menu mnemonicParsing="false" text="option">
                    <MenuItem mnemonicParsing="false" onAction="#back" text="back" />
-                   <MenuItem text="cart" onAction="#cart"></MenuItem>
+                   <MenuItem onAction="#cart" text="cart" />
                </Menu>
            </menus>
        </MenuBar>
