--- a/src/main/resources/Styles.CSS
+++ b/src/main/resources/Styles.CSS
@@ -43,12 +43,24 @@
         -fx-background-image: url("design/login.png");
     }
 
-    .userBackground {
+    .userBackground{
         -fx-background-image: url("design/casBack.png");
     }
 
-    .jedBackground {
+    .jedBackground{
         -fx-background-image: url("design/selBack.png");
+    }
+
+    .skyBackground{
+        -fx-background-color: #94a8b3;
+    }
+
+    .ashBackground{
+        -fx-background-color: #bababa;
+    }
+
+    .softGreyBackground{
+        -fx-background-color: #dedcde;
     }
 
     .myTextField{
