--- a/src/main/resources/fxml/AdminMenu/ManageCategories.fxml
+++ b/src/main/resources/fxml/AdminMenu/ManageCategories.fxml
@@ -3,11 +3,11 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Menus.MenuController.AdminMenu.ManageCategories">
-            <ListView layoutX="14.0" layoutY="41.0" prefHeight="345.0" prefWidth="286.0" fx:id="categoryList" onMouseClicked="#categorySelect"> </ListView>
-            <MenuBar >
+<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #dedcde;" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Menus.MenuController.AdminMenu.ManageCategories">
+            <ListView fx:id="categoryList" layoutX="14.0" layoutY="41.0" onMouseClicked="#categorySelect" prefHeight="345.0" prefWidth="286.0"> </ListView>
+            <MenuBar>
                 <Menu text="options">
-                    <MenuItem text="back" onAction="#back"></MenuItem>
+                    <MenuItem onAction="#back" text="back" />
                 </Menu>
             </MenuBar>
 </AnchorPane>
