--- a/src/main/resources/fxml/AdminMenu/ManageUserIn.fxml
+++ b/src/main/resources/fxml/AdminMenu/ManageUserIn.fxml
@@ -3,8 +3,8 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="88.0" prefWidth="340.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Menus.MenuController.AdminMenu.ManageUserIn">
+<AnchorPane prefHeight="88.0" prefWidth="340.0" style="-fx-background-color: #dedcde;" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Menus.MenuController.AdminMenu.ManageUserIn">
             <Button layoutX="179.0" layoutY="37.0" onMouseClicked="#deleteUser" prefHeight="27.0" prefWidth="113.0" text="delete user" />
-             <Button text="exit" onMouseClicked="#back"></Button>
-            <Button layoutX="100.0" layoutY="37.0" text="view user" onMouseClicked="#viewUser" />
+             <Button onMouseClicked="#back" text="exit" />
+            <Button layoutX="100.0" layoutY="37.0" onMouseClicked="#viewUser" text="view user" />
 </AnchorPane>
