--- a/src/main/resources/fxml/AdminMenu/ManageUsers.fxml
+++ b/src/main/resources/fxml/AdminMenu/ManageUsers.fxml
@@ -3,16 +3,16 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Menus.MenuController.AdminMenu.ManageUsers">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #dedcde;" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Menus.MenuController.AdminMenu.ManageUsers">
 
     <CheckBox fx:id="buyerCheck" layoutX="57.0" layoutY="37.0" onMouseClicked="#update" selected="true" text="Buyer"> </CheckBox>
     <CheckBox fx:id="sellerCheck" layoutX="131.0" layoutY="37.0" onMouseClicked="#update" selected="true" text="Seller"> </CheckBox>
     <CheckBox fx:id="adminCheck" layoutX="217.0" layoutY="37.0" onMouseClicked="#update" selected="true" text="Admin"> </CheckBox>
     <Label layoutX="14.0" layoutY="38.0" text="show:" />
-   <ListView fx:id="listView" layoutX="13.0" layoutY="85.0" prefHeight="265.0" prefWidth="266.0" onMouseClicked="#userSelect"  />
-    <MenuBar >
+   <ListView fx:id="listView" layoutX="13.0" layoutY="85.0" onMouseClicked="#userSelect" prefHeight="265.0" prefWidth="266.0" />
+    <MenuBar>
         <Menu text="options">
-            <MenuItem text="back" onAction="#back"></MenuItem>
+            <MenuItem onAction="#back" text="back" />
         </Menu>
     </MenuBar>
 </AnchorPane>
