--- a/src/main/resources/fxml/CommentMenu.fxml
+++ b/src/main/resources/fxml/CommentMenu.fxml
@@ -1,14 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.image.*?>
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
-
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Menus.MenuController.commentMenuController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #94a8b3;" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Menus.MenuController.commentMenuController">
     <children>
         <TextField fx:id="usernameTexField" layoutX="91.0" layoutY="80.0" />
         <Label layoutX="31.0" layoutY="84.0" prefHeight="17.0" prefWidth="60.0" text="username" />
