--- a/src/main/resources/fxml/ViewRequestUser.fxml
+++ b/src/main/resources/fxml/ViewRequestUser.fxml
@@ -3,7 +3,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="465.0" prefWidth="639.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Menus.MenuController.ViewRequestUser">
+<AnchorPane prefHeight="465.0" prefWidth="639.0" style="-fx-background-color: #94a8b3;" stylesheets="@../Styles.CSS" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Menus.MenuController.ViewRequestUser">
 <ListView fx:id="request" layoutX="14.0" layoutY="39.0" prefHeight="419.0" prefWidth="609.0" />
     <MenuBar>
         <Menu text="options">
