--- a/src/main/resources/fxml/MainMenu.fxml
+++ b/src/main/resources/fxml/MainMenu.fxml
@@ -23,10 +23,11 @@
        </menus>
      </MenuBar>
      <Button layoutX="14.0" layoutY="106.0" mnemonicParsing="false" onAction="#userzone" text="User Zone" />
-      <Button layoutX="14.0" layoutY="158.0" mnemonicParsing="false" onAction="#shop" prefHeight="27.0" prefWidth="75.0" text="Shop" />
+      <Button layoutX="14.0" layoutY="144.0" mnemonicParsing="false" onAction="#shop" prefHeight="27.0" prefWidth="75.0" text="Shop" />
      <Button layoutX="13.0" layoutY="218.0" onAction="#cartMenu" text="Cart Menu" />
      <Button layoutX="14.0" layoutY="268.0" onAction="#exit" prefHeight="27.0" prefWidth="75.0" text="exit" />
      <Button fx:id="loginLogout" layoutX="14.0" layoutY="64.0" onMouseClicked="#loginLogout" prefHeight="27.0" prefWidth="75.0" text="login" />
+     <Button layoutX="17.0" layoutY="179.0" text="sale shop" onMouseClicked="#saleShop" />
        <VBox fx:id="commercial" layoutX="108.0" layoutY="65.0" prefHeight="241.0" prefWidth="211.0" />
        <Button fx:id="nextButton" layoutX="172.0" layoutY="30.0" onMouseClicked="#nextCommercial" text="next" />
        <Button fx:id="previousButton" layoutX="97.0" layoutY="30.0" onMouseClicked="#previousCommercial" text="previous" />
